@@ -1,14 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>imeji</artifactId>
 	<groupId>org.imeji</groupId>
 	<name>imeji</name>
 	<packaging>war</packaging>
-	<version>1.4.0.1-SNAPSHOT</version>
+	<version>2.0.0.1-SNAPSHOT</version>
 	<url>http://imeji.org</url>
-	<description>
-		http://imeji.org
-	</description>
+	<description>The imeji open source software offers a dedicated metadata management by supporting a non- restrictive metadata schema definition, as simple as liked or as complex as needed.</description>
 	<licenses>
 		<license>
 			<name>Common Development And Distribution License</name>
@@ -21,11 +20,11 @@
 		<url>http://www.mpdl.mpg.de/</url>
 	</organization>
 	<scm>
+		<url>https://github.com/imeji-community/imeji</url>
 		<connection>scm:git:git://github.com/imeji-community/imeji.git</connection>
-		<developerConnection>scm:git:https://github.com/imeji-community/imeji.git</developerConnection>
-		<url>https://github.com/imeji-community/imeji.git</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<developerConnection>scm:git:git@github.com:imeji-community/imeji.git</developerConnection>
+		<tag>develop</tag>
+	</scm>
 	<issueManagement>
 		<system>Github</system>
 		<url>https://github.com/imeji-community/imeji/issues</url>
@@ -52,21 +51,31 @@
 			<timezone>+2</timezone>
 		</developer>
 		<developer>
-			<id>wfrank</id>
-			<name>Wilhelm Frank</name>
-			<email>frank@mpdl.mpg.de</email>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<organization>Max Planck Digital Library</organization>
-			<timezone>+2</timezone>
-		</developer>
-		<developer>
 			<id>LuYu</id>
 			<name>Lu Yu</name>
 			<email>yu@mpdl.mpg.de</email>
 			<roles>
 				<role>Software developer</role>
+			</roles>
+			<organization>Max Planck Digital Library</organization>
+			<timezone>+2</timezone>
+		</developer>
+		<developer>
+			<id>YanYao</id>
+			<name>Yan Yao</name>
+			<email>yao@mpdl.mpg.de</email>
+			<roles>
+				<role>Test Manager</role>
+			</roles>
+			<organization>Max Planck Digital Library</organization>
+			<timezone>+2</timezone>
+		</developer>
+		<developer>
+			<id>MarcoSchlender</id>
+			<name>Marco Schlender</name>
+			<email>schlender@mpdl.mpg.de</email>
+			<roles>
+				<role>Web developer</role>
 			</roles>
 			<organization>Max Planck Digital Library</organization>
 			<timezone>+2</timezone>
@@ -89,7 +98,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<!-- Setting this property so that generated project uses correct version 
 			of richfaces. -->
-		<org.richfaces.bom.version>4.2.3.Final</org.richfaces.bom.version>
+		<org.richfaces.bom.version>4.3.7.Final</org.richfaces.bom.version>
 		<!-- Used by Tomcat to trip version Nr when deploy WAR package, e.g., imeji_1.0_screenshot->imeji -->
 		<project.warName>imeji</project.warName>
 	</properties>
@@ -170,10 +179,10 @@
 		</testResources>
 		<plugins>
 			<plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-release-plugin</artifactId>
-		        <version>2.5</version>
-		    </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -208,7 +217,6 @@
 					<failIfNoTests>false</failIfNoTests>
 					<!-- avoid the out of memory exception thrown in some test scenarios -->
 					<argLine>-Xmx1000M</argLine>
-					<skipTests>true</skipTests>
 				</configuration>
 				<executions>
 					<execution>
@@ -235,10 +243,15 @@
 									the xml schema handling issue (marshalling and unmarshalling) -->
 								<!-- those files will not be copied into the build directories, Maven 
 									does not copy them automatically!!! -->
-								<copy file="src/main/java/de/mpg/j2j/misc/jaxb.index" tofile="${project.build.directory}/classes/de/mpg/j2j/misc/jaxb.index" />
-								<copy file="src/main/java/de/mpg/imeji/logic/vo/jaxb.index" tofile="${project.build.directory}/classes/de/mpg/imeji/logic/vo/jaxb.index" />
-								<copy file="src/main/java/de/mpg/imeji/logic/ingest/vo/jaxb.index" tofile="${project.build.directory}/classes/de/mpg/imeji/logic/ingest/vo/jaxb.index" />
-								<copy file="src/main/java/de/mpg/imeji/logic/vo/predefinedMetadata/jaxb.index" tofile="${project.build.directory}/classes/de/mpg/imeji/logic/vo/predefinedMetadata/jaxb.index" />
+								<copy file="src/main/java/de/mpg/j2j/misc/jaxb.index"
+									tofile="${project.build.directory}/classes/de/mpg/j2j/misc/jaxb.index" />
+								<copy file="src/main/java/de/mpg/imeji/logic/vo/jaxb.index"
+									tofile="${project.build.directory}/classes/de/mpg/imeji/logic/vo/jaxb.index" />
+								<copy file="src/main/java/de/mpg/imeji/logic/ingest/vo/jaxb.index"
+									tofile="${project.build.directory}/classes/de/mpg/imeji/logic/ingest/vo/jaxb.index" />
+								<copy
+									file="src/main/java/de/mpg/imeji/logic/vo/predefinedMetadata/jaxb.index"
+									tofile="${project.build.directory}/classes/de/mpg/imeji/logic/vo/predefinedMetadata/jaxb.index" />
 							</tasks>
 						</configuration>
 						<goals>
@@ -505,14 +518,44 @@
 		<!-- END: Digilib integration -->
 		<dependency>
 			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-core</artifactId>
-			<version>1.3</version>
+			<artifactId>tika-server</artifactId>
+			<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
-			<version>1.3</version>
+			<version>1.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<!-- RestService -->
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.9</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.9</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-multipart</artifactId>
+			<version>1.9</version>
+			<scope>compile</scope>
+		</dependency>		
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-json</artifactId>
+			<version>1.8</version>
+		</dependency>		
+		
 		<!-- <dependency> <groupId>net.java.dev.jai-imageio</groupId> <artifactId>jai-imageio-core-standalone</artifactId> 
 			<version>1.2-pre-dr-b04-2011-07-04</version> </dependency> <dependency> <groupId>org.devlib.schmidt</groupId> 
 			<artifactId>imageinfo</artifactId> <version>1.9</version> <type>jar</type> 
@@ -522,6 +565,12 @@
 		<!-- this profile is used by developers -->
 		<profile>
 			<id>env-development</id>
+			<properties>
+				<!-- TO avoid warning File encoding has not been set, using platform encoding Cp1252, i.e. build is platform dependent! -->
+				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+				<!-- the jdk version to use -->
+				<jdk.version>1.7</jdk.version>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
@@ -550,6 +599,14 @@
 								</goals>
 							</execution>
 						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>org.codehaus.plexus</groupId>
+								<artifactId>plexus-utils</artifactId>
+								<version>1.4.1</version>
+								<scope>runtime</scope>
+							</dependency>
+						</dependencies>						
 					</plugin>
 					<plugin>
 						<artifactId>maven-antrun-plugin</artifactId>
@@ -560,9 +617,12 @@
 								<phase>install</phase>
 								<configuration>
 									<tasks>
-										<delete quiet="true" file="${tomcat.webapps}/${project.warName}.war" />
+										<delete quiet="true"
+											file="${tomcat.webapps}/${project.warName}.war" />
 										<delete quiet="true" dir="${tomcat.webapps}/${project.warName}" />
-										<copy overwrite="true" file="${project.build.directory}/${project.warName}.war" tofile="${tomcat.webapps}/${project.warName}.war" />
+										<copy overwrite="true"
+											file="${project.build.directory}/${project.warName}.war"
+											tofile="${tomcat.webapps}/${project.warName}.war" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -571,6 +631,21 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+					  <groupId>org.zeroturnaround</groupId>
+					  <artifactId>jrebel-maven-plugin</artifactId>
+					  <version>1.1.5</version>
+					  <executions>
+					    <execution>
+					      <id>generate-rebel-xml</id>
+					      <phase>process-resources</phase>
+					      <goals>
+					        <goal>generate</goal>
+					      </goals>
+					    </execution>
+					  </executions>
+					</plugin>					
+					
 				</plugins>
 				<pluginManagement>
 					<plugins>
@@ -601,13 +676,36 @@
 					</plugins>
 				</pluginManagement>
 			</build>
+		</profile>
+		<profile>
+			<id>env-testing-continuum</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
 			<properties>
 				<!-- TO avoid warning File encoding has not been set, using platform 
 					encoding Cp1252, i.e. build is platform dependent! -->
 				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 				<!-- the jdk version to use -->
 				<jdk.version>1.7</jdk.version>
+				<project.build.finalName>imeji</project.build.finalName>
 			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.tomcat.maven</groupId>
+						<artifactId>tomcat7-maven-plugin</artifactId>
+						<version>2.1</version>
+						<configuration>
+							<url>http://dev-faces.mpdl.mpg.de/manager/text</url>
+							<server>tomcat</server>
+							<path>/imeji</path>
+							<warFile>/X/continuum/apache-continuum-1.4.1/data/working-directory/181/target/imeji.war</warFile>
+							<argLine>-Xms4096m -Xmx4096m -XX:MaxPermSize=512m</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
